# protofablab

./: .gitignore  .gitmodules  README.md  requirements.txt  test.sh
2022/docs/: Gemfile  _config.yml
2023/: README.md
2023/projects/: README.md
2024/: README.md
2024/assignments/: README.md
2024/projects/: README.md
2025/: README.md
2025/projects/Group105/ros_ws/src/neuro_rover/: CMakeLists.txt  package.xml
2025/projects/Group105/ros_ws/src/neuro_rover/launch/: deployment.launch  localization.launch  neuro_behavior.launch
2025/projects/Group105/ros_ws/src/neuro_rover/scripts/: neuro_controller.py
2025/projects/Group105/ros_ws/src/neuro_rover/worlds/: five_pillars.world  single_pillar.world
client/: client.html  client.py  main.py
docs/: Gemfile  _config.yml  about.markdown
docs/_posts/: 2022-09-19-welcome-to-jekyll.markdown  2022-09-28-github-pages-online.markdown
docs/topics/: arduino.md  communication.md  fabrication.md  interface.md  raspi.md
examples/: TEST.py
pipeline/: README.md  pipeline.json  pipeline.py  test.ipynb
presentations/: Docker Containers.pptx
projects/01_HomeNotifier/: Readme.md
projects/02_smart_intercom/: PI_SETUP.md  README.md  docker-compose.yml  nginx.conf  pi-setup.md
projects/03_Silhouetize/: README.md  config.toml  requirements.txt
projects/03_robotButlerThemedService/: README.md  journal.csv
projects/04_enviroGuard/: README.md
projects/04_project/: app.py  config.cfg  requirements.txt
server/: http_server.py  server.py  server2.py
server/staticFiles/: main.css
shared/: image_util.py
(+622 files in other folders)
